# E46Track

./: .gitignore  README.md  privacy_policy.md  settings.gradle
App/: App_en_US.ts  CMakeLists.txt  Configuration.qml  ConfigurationForm.ui.qml  Dashboard.qml  DashboardForm.ui.qml  LateralG.qml  LateralGForm.ui.qml  Main.qml  MainForm.ui.qml  Pedal.qml  PedalForm.ui.qml  Replay.qml  ReplayForm.ui.qml  Rpm.qml  RpmForm.ui.qml  SerialPort.qml  SteeringWheel.qml  SteeringWheelForm.ui.qml  Store.qml  WiFiInterface.qml  YawForm.ui.qml  converter.cpp  converter.h  datalogger.cpp  datalogger.h  ds2message.h  extractors.h  facade.cpp  facade.h  location.cpp  location.h  main.cpp  main.qml  model.cpp  model.h  qml.qrc  replaymodel.cpp  replaymodel.h  requester.h  (+6 more)
App/+android/: Store.qml
App/android/: AndroidManifest.xml  build.gradle
App/virtualcontrol/: .gitignore  settings.gradle
App/virtualcontrol/app/: build.gradle
TestServer/: CMakeLists.txt  main.cpp
Visualizer/: CMakeLists.txt  Dashboard.qml  DashboardForm.ui.qml  LateralG.qml  LateralGForm.ui.qml  Pedal.qml  Rpm.qml  SteeringWheel.qml  SteeringWheelForm.ui.qml  Visualizer_en_US.ts  Yaw.qml  YawForm.ui.qml  converter.cpp  converter.h  csvparser.cpp  csvparser.h  main.cpp  main.qml  model.cpp  model.h  qml.qrc
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tomicooler/bmw/e46track/: Utils.java  (+8 more)
app/src/main/res/layout/: content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: root_preferences.xml
doc/: raspberry_arch.graphml
gradle/wrapper/: gradle-wrapper.properties
raspberry/: 42-latency-ttyUSB0.rules  README.md  bbpi.service  bbpi.socket  e46launcher.service  e46network.service  e46network.sh  e46track.service  latency_fixer.sh
raspberry/webapp/: main.go
raspberry/webapp/static/: index.html  main.css  manifest.json
(+20 files in other folders)
